--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+	"proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -30,7 +31,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "proxy": "http://localhost:8080"
+    ]
   }
 }
